[gd_scene load_steps=5 format=3 uid="uid://fg6hr0vam70r"]

[ext_resource type="Script" path="res://theman.gd" id="1_agoay"]
[ext_resource type="Texture2D" uid="uid://dhvskcmvdcjmm" path="res://icon.svg" id="2_b8tvm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oieio"]
size = Vector2(46, 46)

[sub_resource type="CircleShape2D" id="CircleShape2D_bg1p1"]
radius = 77.8203

[node name="Theman" type="CharacterBody2D"]
script = ExtResource("1_agoay")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_oieio")

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(0.999996, 0)
scale = Vector2(0.40625, 0.40625)
texture = ExtResource("2_b8tvm")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_bg1p1")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
